JS2JQ/src/JS2JQCompiler/JavaScriptToJQueryConverterParser.java
// $ANTLR 3.5.1 C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g 2023-05-23 17:01:00

	package JS2JQConverter;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class JavaScriptToJQueryConverterParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ADD", "AND", "AND_BIT", 
		"ASSERT", "ASSIGN", "AT", "BASIC_TYPE", "BREAK", "BYTE", "CASE", "CATCH", 
		"CHAR", "CL", "CLASS", "CM", "COMMENT", "CONTINUE", "DEC", "DEFAULT", 
		"DIGIT", "DIV", "DO", "DOCUMENT", "DOT", "ELSE", "ENDTEST", "ENUM", "EQ", 
		"ERROR_TK", "ESC_SEQ", "EXPONENT", "EXTENDS", "FINAL", "FINALLY", "FLOAT", 
		"FOR", "GE", "GT", "HEX_DIGIT", "ID", "IF", "IMPLEMENTS", "IMPORT", "INC", 
		"INSTANCEOF", "INTEGER", "INTERFACE", "LB", "LBR", "LE", "LETTER", "LP", 
		"LT", "MOD", "NATIVE", "NEQ", "NEW", "NOT", "OCTAL_ESC", "OR", "OR_BIT", 
		"PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RB", "RBR", "RETURN", "RP", 
		"SC", "STAR", "STATIC", "STRING", "SUB", "SUPER", "SWITCH", "SYNCHRONIZED", 
		"TEST", "THIS", "THROW", "THROWS", "TRANSIENT", "TRY", "UNICODE_ESC", 
		"VOID", "VOLATILE", "WHILE", "WS", "XOR"
	};
	public static final int EOF=-1;
	public static final int ABSTRACT=4;
	public static final int ADD=5;
	public static final int AND=6;
	public static final int AND_BIT=7;
	public static final int ASSERT=8;
	public static final int ASSIGN=9;
	public static final int AT=10;
	public static final int BASIC_TYPE=11;
	public static final int BREAK=12;
	public static final int BYTE=13;
	public static final int CASE=14;
	public static final int CATCH=15;
	public static final int CHAR=16;
	public static final int CL=17;
	public static final int CLASS=18;
	public static final int CM=19;
	public static final int COMMENT=20;
	public static final int CONTINUE=21;
	public static final int DEC=22;
	public static final int DEFAULT=23;
	public static final int DIGIT=24;
	public static final int DIV=25;
	public static final int DO=26;
	public static final int DOCUMENT=27;
	public static final int DOT=28;
	public static final int ELSE=29;
	public static final int ENDTEST=30;
	public static final int ENUM=31;
	public static final int EQ=32;
	public static final int ERROR_TK=33;
	public static final int ESC_SEQ=34;
	public static final int EXPONENT=35;
	public static final int EXTENDS=36;
	public static final int FINAL=37;
	public static final int FINALLY=38;
	public static final int FLOAT=39;
	public static final int FOR=40;
	public static final int GE=41;
	public static final int GT=42;
	public static final int HEX_DIGIT=43;
	public static final int ID=44;
	public static final int IF=45;
	public static final int IMPLEMENTS=46;
	public static final int IMPORT=47;
	public static final int INC=48;
	public static final int INSTANCEOF=49;
	public static final int INTEGER=50;
	public static final int INTERFACE=51;
	public static final int LB=52;
	public static final int LBR=53;
	public static final int LE=54;
	public static final int LETTER=55;
	public static final int LP=56;
	public static final int LT=57;
	public static final int MOD=58;
	public static final int NATIVE=59;
	public static final int NEQ=60;
	public static final int NEW=61;
	public static final int NOT=62;
	public static final int OCTAL_ESC=63;
	public static final int OR=64;
	public static final int OR_BIT=65;
	public static final int PACKAGE=66;
	public static final int PRIVATE=67;
	public static final int PROTECTED=68;
	public static final int PUBLIC=69;
	public static final int RB=70;
	public static final int RBR=71;
	public static final int RETURN=72;
	public static final int RP=73;
	public static final int SC=74;
	public static final int STAR=75;
	public static final int STATIC=76;
	public static final int STRING=77;
	public static final int SUB=78;
	public static final int SUPER=79;
	public static final int SWITCH=80;
	public static final int SYNCHRONIZED=81;
	public static final int TEST=82;
	public static final int THIS=83;
	public static final int THROW=84;
	public static final int THROWS=85;
	public static final int TRANSIENT=86;
	public static final int TRY=87;
	public static final int UNICODE_ESC=88;
	public static final int VOID=89;
	public static final int VOLATILE=90;
	public static final int WHILE=91;
	public static final int WS=92;
	public static final int XOR=93;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public JavaScriptToJQueryConverterParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public JavaScriptToJQueryConverterParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return JavaScriptToJQueryConverterParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g"; }


		Handler h;

		// *****
		public Handler getHandler () {
			return h;
		}

		// Override e delega nella gestione degli errori sintattici
	  public void displayRecognitionError(String[] tokenNames,
	                                       RecognitionException e) {
	    // recupero alcune meta informazioni relative all'errore
			String hdr = " * " + getErrorHeader(e);
			String msg = " - " + getErrorMessage(e, tokenNames);
			
			// recuperoil token corrente  
			Token tk = input.LT(1);
			
			// lascio gestire il messaggio all'handler
			h.handleError(tk, hdr, msg);
	  }

		//*******
	 	void initParser () {
	 		// passo lo stream di token all'handler 
			h = new Handler(input);
		}



	// $ANTLR start "parseJava"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:50:1: parseJava : getRule ;
	public final void parseJava() throws RecognitionException {
		initParser();
		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:52:2: ( getRule )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:53:3: getRule
			{
			pushFollow(FOLLOW_getRule_in_parseJava64);
			getRule();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parseJava"



	// $ANTLR start "getRule"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:55:1: getRule : DOCUMENT DOT get= ID LP i= STRING RP SC ;
	public final void getRule() throws RecognitionException {
		Token get=null;
		Token i=null;

		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:56:2: ( DOCUMENT DOT get= ID LP i= STRING RP SC )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:57:3: DOCUMENT DOT get= ID LP i= STRING RP SC
			{
			match(input,DOCUMENT,FOLLOW_DOCUMENT_in_getRule76); 
			System.out.println("Ho riconosciuto DOCUMENT");
			match(input,DOT,FOLLOW_DOT_in_getRule80); 
			get=(Token)match(input,ID,FOLLOW_ID_in_getRule84); 
			match(input,LP,FOLLOW_LP_in_getRule86); 
			i=(Token)match(input,STRING,FOLLOW_STRING_in_getRule90); 
			match(input,RP,FOLLOW_RP_in_getRule92); 
			match(input,SC,FOLLOW_SC_in_getRule94); 
			h.translate(get, i);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "getRule"



	// $ANTLR start "prologRule"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:60:1: prologRule : ( packageDefintionRule )? ( importRule )* ;
	public final void prologRule() throws RecognitionException {
		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:61:2: ( ( packageDefintionRule )? ( importRule )* )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:62:3: ( packageDefintionRule )? ( importRule )*
			{
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:62:3: ( packageDefintionRule )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==PACKAGE) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:62:3: packageDefintionRule
					{
					pushFollow(FOLLOW_packageDefintionRule_in_prologRule109);
					packageDefintionRule();
					state._fsp--;

					}
					break;

			}

			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:63:3: ( importRule )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IMPORT) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:63:3: importRule
					{
					pushFollow(FOLLOW_importRule_in_prologRule114);
					importRule();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prologRule"



	// $ANTLR start "packageDefintionRule"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:66:1: packageDefintionRule : PACKAGE ID ( DOT ID )* SC ;
	public final void packageDefintionRule() throws RecognitionException {
		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:67:2: ( PACKAGE ID ( DOT ID )* SC )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:68:3: PACKAGE ID ( DOT ID )* SC
			{
			match(input,PACKAGE,FOLLOW_PACKAGE_in_packageDefintionRule129); 
			match(input,ID,FOLLOW_ID_in_packageDefintionRule131); 
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:68:14: ( DOT ID )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==DOT) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:68:15: DOT ID
					{
					match(input,DOT,FOLLOW_DOT_in_packageDefintionRule134); 
					match(input,ID,FOLLOW_ID_in_packageDefintionRule136); 
					}
					break;

				default :
					break loop3;
				}
			}

			match(input,SC,FOLLOW_SC_in_packageDefintionRule140); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "packageDefintionRule"



	// $ANTLR start "importRule"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:71:1: importRule : IMPORT ID ( importSubRule )? SC ;
	public final void importRule() throws RecognitionException {
		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:72:2: ( IMPORT ID ( importSubRule )? SC )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:73:3: IMPORT ID ( importSubRule )? SC
			{
			match(input,IMPORT,FOLLOW_IMPORT_in_importRule154); 
			match(input,ID,FOLLOW_ID_in_importRule156); 
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:73:13: ( importSubRule )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==DOT) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:73:13: importSubRule
					{
					pushFollow(FOLLOW_importSubRule_in_importRule158);
					importSubRule();
					state._fsp--;

					}
					break;

			}

			match(input,SC,FOLLOW_SC_in_importRule161); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "importRule"



	// $ANTLR start "importSubRule"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:75:1: importSubRule : DOT ( STAR | ID ( importSubRule )? ) ;
	public final void importSubRule() throws RecognitionException {
		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:76:2: ( DOT ( STAR | ID ( importSubRule )? ) )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:77:3: DOT ( STAR | ID ( importSubRule )? )
			{
			match(input,DOT,FOLLOW_DOT_in_importSubRule174); 
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:77:7: ( STAR | ID ( importSubRule )? )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==STAR) ) {
				alt6=1;
			}
			else if ( (LA6_0==ID) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:77:9: STAR
					{
					match(input,STAR,FOLLOW_STAR_in_importSubRule178); 
					}
					break;
				case 2 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:78:7: ID ( importSubRule )?
					{
					match(input,ID,FOLLOW_ID_in_importSubRule186); 
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:78:10: ( importSubRule )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==DOT) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:78:10: importSubRule
							{
							pushFollow(FOLLOW_importSubRule_in_importSubRule188);
							importSubRule();
							state._fsp--;

							}
							break;

					}

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "importSubRule"



	// $ANTLR start "classDefinitionRule"
	// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:82:1: classDefinitionRule : modifiersRule CLASS ID ( extendsRule )? ( implementsRule )? LBR ( methodDefinitionRule | propertyDefinitionRule )* RBR ;
	public final void classDefinitionRule() throws RecognitionException {
		try {
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:83:2: ( modifiersRule CLASS ID ( extendsRule )? ( implementsRule )? LBR ( methodDefinitionRule | propertyDefinitionRule )* RBR )
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:84:3: modifiersRule CLASS ID ( extendsRule )? ( implementsRule )? LBR ( methodDefinitionRule | propertyDefinitionRule )* RBR
			{
			pushFollow(FOLLOW_modifiersRule_in_classDefinitionRule209);
			modifiersRule();
			state._fsp--;

			match(input,CLASS,FOLLOW_CLASS_in_classDefinitionRule211); 
			match(input,ID,FOLLOW_ID_in_classDefinitionRule213); 
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:84:26: ( extendsRule )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==EXTENDS) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:84:26: extendsRule
					{
					pushFollow(FOLLOW_extendsRule_in_classDefinitionRule215);
					extendsRule();
					state._fsp--;

					}
					break;

			}

			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:84:39: ( implementsRule )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==IMPLEMENTS) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:84:39: implementsRule
					{
					pushFollow(FOLLOW_implementsRule_in_classDefinitionRule218);
					implementsRule();
					state._fsp--;

					}
					break;

			}

			match(input,LBR,FOLLOW_LBR_in_classDefinitionRule225); 
			// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:86:5: ( methodDefinitionRule | propertyDefinitionRule )*
			loop9:
			while (true) {
				int alt9=3;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==VOID) ) {
					alt9=1;
				}
				else if ( (LA9_0==BASIC_TYPE) ) {
					alt9=2;
				}

				switch (alt9) {
				case 1 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:86:7: methodDefinitionRule
					{
					pushFollow(FOLLOW_methodDefinitionRule_in_classDefinitionRule234);
					methodDefinitionRule();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\boffe\\Desktop\\Progetto_LFC\\JavaScriptToJQueryConverter\\JS2JQ\\src\\JS2JQCompiler\\JavaScriptToJQueryConverter.g:87:7: propertyDefinitionRule
					{
					pushFollow(FOLLOW_propertyDefinitionRule_in_classDefinitionRule242);
					propertyDefinitionRule();
					state._fsp--;

					}
					break;

				default :
					break loop9;
				}
			}

			match(input,RBR,FOLLOW_RBR_in_classDefinitionRule250); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classDefinitionRule"


